<resources>

    <!-- APP names & bars -->
    <string name="app_name">HowMany</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">Listagem</string>

    <!-- DIALOG add COUNTER -->
    <string name="custom_dialog_title">Novo contador</string>
    <string name="tag_add_save">Save</string>
    <string name="tag_add_cancel">Cancel</string>

    <string name="tag_description">Descrição</string>
    <string name="tag_description_validator">É necessario preencher a descrição.</string>
    <string name="tag_unity"      >Unidade de medida</string>
    <string name="tag_unity_multiplier">Incremento</string>
    <string name="tag_color">Cor do contador</string>
    <string name="tag_color_button">Selecione</string>
    <string name="tag_click_act">Ação do click</string>
    <string name="tag_counter">Contagem</string>

    <string-array name="measure_unity">
        <item>Unidade</item>
        <item>Litros</item>
        <item>Kilos</item>
        <item>Metros</item>
        <item>Kilometros</item>
        <item>Horas</item>
        <item>Dias</item>
    </string-array>

    <string-array name="measure_unity_alias">
        <item></item>
        <item>Lts</item>
        <item>Kgs</item>
        <item>Mts</item>
        <item>Kms</item>
        <item>Hrs</item>
        <item>Dias</item>
    </string-array>

    <string-array name="unity_multiplier">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="tag_color_array">
        <item>#ffffff</item>
        <item>#e53935</item>
        <item>#e91e63</item>
        <item>#9c27b0</item>
        <item>#03a9f4</item>
        <item>#8bc34a</item>
        <item>#ffeb3b</item>
        <item>#ff9800</item>
        <item>#8d6e63</item>
        <item>#78909c</item>
    </string-array>

    <string-array name="tag_color">
        <item>Selecione</item>
    </string-array>

    <string-array name="counter_click_act">
        <item>Contar</item>
        <item>Editar</item>
    </string-array>


</resources>