<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/universal_margin"
    android:padding="@dimen/universal_padding"
    android:orientation="vertical">

    <TableLayout
        android:layout_marginTop="40dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    <TableRow
        android:paddingTop="@dimen/universal_smaller_padd"
        android:paddingBottom="@dimen/universal_smaller_padd">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_description"/>

        <EditText
            android:id="@+id/addTagEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:inputType="text"
            android:textColorHint="?attr/colorAccent" />
      </TableRow>
        <TableRow
            android:paddingTop="@dimen/universal_smaller_padd"
            android:paddingBottom="@dimen/universal_smaller_padd">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_unity"/>
            <Spinner
                android:id="@+id/addUnityTypeSpinner"
                android:layout_width="match_parent"

                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/colorAccent"
                android:spinnerMode="dropdown"/>
        </TableRow>
        <TableRow
            android:paddingTop="@dimen/universal_smaller_padd"
            android:paddingBottom="@dimen/universal_smaller_padd">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_unity_multiplier"/>
            <Spinner
                android:id="@+id/addUnityMultSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="?attr/colorAccent"
                android:spinnerMode="dropdown"/>
        </TableRow>

        <TableRow
            android:paddingTop="@dimen/universal_smaller_padd"
            android:paddingBottom="@dimen/universal_smaller_padd">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_color"/>
             <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addCounterColorButton"
                android:layout_width="match_parent"
                 android:layout_weight="1"
                android:layout_height="40dp"
                 android:text="@string/tag_color_button"
                 android:textColor="@color/black"
                 android:background="@drawable/tag_color_selector"/>
        </TableRow>
        <TableRow
            android:paddingTop="@dimen/universal_smaller_padd"
            android:paddingBottom="@dimen/universal_smaller_padd">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_click_act"/>
            <Spinner
                android:id="@+id/addClickActSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="?attr/colorAccent"
                android:spinnerMode="dropdown"/>
        </TableRow>

        <TableRow
            android:paddingTop="@dimen/universal_padding"
            android:paddingBottom="@dimen/universal_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/tag_counter"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addCounterMinus"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/addCounterValueEdit"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:autofillHints="0"
                android:text="0"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:inputType="number"
                android:padding="@dimen/universal_padding"
                android:textColorHint="?attr/colorAccent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addCounterMore"
                android:layout_width="50dp"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="+"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            </FrameLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
